--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,10 @@
-JWT_SECRET="new_secret_key_to_force_logout_12345"
+JWT_SECRET="viprakarma_jwt_secret_2024_production_key_change_this"
 NEXT_PUBLIC_RAZORPAY_KEY_ID="rzp_test_5y5g4gY3g3g3g3"
 NEXT_PUBLIC_RAZORPAY_KEY_SECRET="your_razorpay_key_secret"
 TURBOPACK=true
+
+# Database Configuration (Neon PostgreSQL)
+DATABASE_URL="postgresql://neondb_owner:npg_6sNSGWwe4BHo@ep-patient-poetry-adwh9kek-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require"
 
 # Astro Engine Configuration (Production)
 NEXT_PUBLIC_ASTRO_ENGINE_URL=https://astro-engine-c5xk.onrender.com
