--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "react-syntax-highlighter": "^15.6.1",
         "react-wrap-balancer": "^1.1.1",
         "recharts": "^3.0.2",
+        "resend": "^6.6.0",
         "simplex-noise": "^4.0.3",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
