Fix admin lang, pooja, notifications, db init

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "tsx migrate.ts && next start",
         "lint": "next lint",
         "drizzle:generate": "drizzle-kit generate",
         "db:migrate": "tsx migrate.ts"
@@ -123,6 +123,7 @@
         "tailwindcss-animate": "^1.0.7",
         "three": "^0.178.0",
         "three-globe": "^2.43.0",
+        "tsx": "^4.21.0",
         "tz-lookup": "^6.1.25",
         "vaul": "^1.1.2",
         "zod": "^4.1.12"
