feat: Complete email workflow, astrologer filtering, and UI improvements
- Email notifications for consultation approval
- Email to astrologer on first user message
- Email to user when astrologer joins/sends message
- Filter to show only online and approved astrologers
- Fixed online/offline toggle for pandits
- Added phone field to pandit form
- Removed call/video buttons, kept only chat
- Removed floating Talk to Astrologer button
- Fixed all API validation errors
- Updated environment variables for viprakarma.com domain

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ ASTRO_ENGINE_URL=https://astro-engine-c5xk.onrender.com
 NODE_ENV=production
 RESEND_API_KEY=re_bQWtMVoD_BW9LRkDWdAFQNCpRGJfExGkw
 EMAIL_FROM=VipraKarma <noreply@viprakarma.com>
+NEXT_PUBLIC_APP_URL=https://viprakarma.com
