--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local env files
+.env*.local
+.env
+.env.production
+.env.development
+
+# databases
+*.db
+*.sqlite
