--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
         "eslint-config-next": "^15.5.4",
         "tailwindcss": "^4",
         "tw-animate-css": "^1.4.0",
-        "typescript": "^5"
+        "typescript": "^5",
+        "@cloudflare/next-on-pages": "latest"
     }
 }
