--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.23.22",
         "motion-dom": "^12.23.21",
-        "next": "^16.0.8",
+        "next": "15.5.2",
         "next-themes": "^0.4.6",
         "nodemailer": "^7.0.9",
         "qrcode": "^1.5.4",
@@ -143,6 +143,6 @@
         "tailwindcss": "^4",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5",
-        "@cloudflare/next-on-pages": "latest"
+        "@cloudflare/next-on-pages": "1.13.16"
     }
 }
